--- a/jo.bizzu/lib/css/styleguide.css
+++ b/jo.bizzu/lib/css/styleguide.css
@@ -9,6 +9,10 @@
 	--color-neutral-medium:#999;
 	--color-neutral-dark:#555;
 
+	--color-main-light:blue;
+	--color-main-medium:blue;
+	--color-main-dark:blue;
+
 	--color-black:#000;
 	--color-white:#fff;
 
@@ -48,7 +52,7 @@ a:hover {
 
 /* LAYOUT CLASSES */
 .container {
-	max-width: 1200px;
+	max-width: 800px;
 	margin-right: auto;
 	margin-left: auto;
 }
@@ -78,6 +82,16 @@ a:hover {
 .flex-justify-center { justify-content:center; }
 
 
+/* Small Classes */
+.media-image {
+	max-width: 100%;
+	vertical-align: text-bottom;
+}
+
+.hidden {
+	display:none;
+}
+
 
 /* COMPONENT CLASSES */
 
@@ -86,6 +100,86 @@ a:hover {
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-left: 0;
+}
+
+.nav a {
+	display:block;
+	padding:0.2em 0.5em;
+}
+
+.nav a:hover {
+	background-color: var(--color-main-medium);
+	color: var(--color-white);
+	text-decoration: none;
+}
+
+.nav .active a {
+	background-color: var(--color-main-light);
+	color: inherit;
+}
+
+.nav-material ul,
+.nav-crumbs ul,
+.nav-pills ul,
+.nav-stretch ul,
+.nav-flex ul {
+	display:flex;
+}
+
+.nav-material li,
+.nav-stretch li {
+	flex: 1 1 auto;
+	text-align: center	;
+}
+
+.nav-pills a {
+	border-radius: 2em;
+	padding: 0.5em 1em;
+}
+
+.nav-crumbs a {
+	display: inline-block;
+}
+
+.nav-crumbs .active a,
+.nav-crumbs a:hover {
+	background-color: transparent;
+	color: inherit;
+	text-decoration: underline;
+}
+
+.nav-crumbs li:not(:first-child)::before {
+	content:'/';
+}
+
+.nav-material a {
+	padding: 0.5em 1.0em;
+	position: relative;
+}
+
+.nav-material .active a {
+	background-color: transparent;
+	color: inherit;
+}
+
+.nav-material a:hover {
+	background-color: var(--color-neutral-light);
+	color: inherit;
+}
+
+.nav-material a::after {
+	content:'';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0;
+	background-color: var(--color-main-medium);
+	transition: all 0.3s;
+}
+
+.nav-material .active a::after {
+	height: 4px;
 }
 
 .navbar {
@@ -147,4 +241,173 @@ a:hover {
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
+}
+
+/* TABLES */
+.table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.table th,
+.table td {
+	text-align:left;
+	padding: 0.2em 0.5em;
+}
+
+.table.striped tbody tr:nth-child(odd) {
+	background-color: var(--color-neutral-light);
+}
+
+.table.lined.all th:not(:first-child),
+.table.lined.all td:not(:first-child),
+.table.lined.vertical th:not(:first-child),
+.table.lined.vertical td:not(:first-child) {
+	border-left: 1px solid var(--color-neutral-medium);
+}
+
+.table.lined.all tbody tr,
+.table.lined.horizontal tbody tr {
+	border-top: 1px solid var(--color-neutral-medium);
+}
+
+.table.lined.all,
+.table.lined.border {
+	border: 1px solid var(--color-neutral-medium);
+}
+
+
+/* Figure */
+.figure {
+	margin: 0;
+	background-color: var(--color-white);
+}
+
+.figure	img {
+	width: 100%;
+	vertical-align: text-bottom;
+}
+
+.figure figcaption {
+	padding: 1em;
+}
+
+
+/* Forms */
+.form-control {
+	margin: 1em 0;
+}
+
+.form-select>select,
+.hotdog input,
+.hotdog,
+.form-button,
+.form-input,
+.form-item {
+  display: inline-block;
+  background-color: transparent;
+  border-width: 0;
+  font: inherit;
+  -webkit-appearance: none;
+  color: inherit;
+  width: 100%;
+  outline: 0;
+}
+
+.form-input {
+  border-bottom: 1px solid var(--color-neutral-light);
+  padding: 0.5em 1.0em;
+}
+
+.form-input:focus {
+	border-bottom-color: var(--color-main-light);
+}
+
+.form-label {
+  font-size: 0.8em;
+  color: var(--color-neutral-medium);
+  display: block;
+  width: 100%;
+}
+
+.form-button {
+  background-color: var(--color-neutral-light);
+  border-radius: 0.2em;
+  cursor: pointer;
+  text-align: center;
+  padding: 0.5em 1.0em;
+}
+
+.form-button:active {
+	background-color: var(--color-main-light);
+}
+
+.form-button:hover {
+	text-decoration: none;
+}
+
+.hotdog {
+  background-color: var(--color-neutral-light);
+  border-radius: 2em;
+  padding: 0.5em 1.5em;
+  display:flex;
+}
+
+.hotdog.dark {
+	background-color: var(--color-neutral-dark);
+	color: var(--color-neutral-light);
+}
+.hotdog.light {
+	background-color: var(--color-white);
+	color: var(--color-black);
+}
+
+.form-select>select {
+	padding: 0.5em 1em;
+	background-color: var(--color-neutral-light);
+	border-radius:0.3em;
+	cursor:pointer;
+}
+
+.form-select {
+	position: relative;
+}
+
+.form-select::after{
+	content:'▼';
+	font-family: arial;
+	font-size:0.8em;
+	position:absolute;
+	top:50%;
+	right: 0.2em;
+	transform:translateY(-50%);
+	pointer-events: none;
+	color: var(--color-neutral-medium);
+}
+
+/* Toggle */
+.toggle label {
+	font-size:1.3em;
+	display:inline-block;
+	width:2em;
+	height:1em;
+	border:0.1em solid var(--color-neutral-medium);
+	background-color: var(--color-neutral-light);
+	border-radius: 1em;
+	position: relative;
+}
+
+.toggle label::after {
+	content:'';
+	display:inline-block;
+	width:0.8em;
+	height:0.8em;
+	border-radius: 1em;
+	position: absolute;
+	background-color: var(--color-white);
+	transition: all 0.3s;
+}
+
+.toggle input:checked + label::after {
+	transform: translateX(1em);
 }
